<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Information"
            type="com.example.asus.shetuan.bean.InformationFill" />
    </data>

    <LinearLayout
        android:id="@+id/activity_fill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.example.asus.shetuan.activity.login.FillInformationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/main_color">

            <ImageView
                android:layout_width="@dimen/title_image_width"
                android:layout_height="match_parent"
                android:onClick="@{Information.backimageclick}"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/fill_information"
                android:textColor="@color/title_font_color"
                android:textSize="@dimen/title_font_size" />

            <TextView
                android:id="@+id/fill_inform_finish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/finished"
                android:textColor="@color/title_font_color"
                android:textSize="@dimen/font_size" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_module_space_larger"
                    android:background="@color/item_space_color"></LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/head_image"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/fill_inform_headimage"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:layout_alignParentRight="true"
                        fresco:placeholderImage="@drawable/avater"
                        fresco:roundedCornerRadius="40dp"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_bottom_line"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/gray"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/nick_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />

                    <com.example.asus.shetuan.weight.EditTextWithDel
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:hint="@string/nick_name_hint"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/fill_inform_academe"
                        android:singleLine="true"
                        android:text="@={Information.nickname}"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_bottom_line"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/gray"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/sex"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/fill_inform_sexselect"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:hint="点击选择性别"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_module_space_larger"
                    android:background="@color/item_space_color"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/academy"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />

                    <com.example.asus.shetuan.weight.EditTextWithDel
                        android:id="@+id/fill_inform_academe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:hint="@string/academy_hint"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/fill_inform_studentid"
                        android:singleLine="true"
                        android:text="@={Information.academe}"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_bottom_line"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/gray"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/student_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />

                    <com.example.asus.shetuan.weight.EditTextWithDel
                        android:id="@+id/fill_inform_studentid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:hint="@string/student_number_hint"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/fill_inform_name"
                        android:singleLine="true"
                        android:text="@={Information.studentid}"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_module_space_larger"
                    android:background="@color/item_space_color"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/student_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />

                    <com.example.asus.shetuan.weight.EditTextWithDel
                        android:id="@+id/fill_inform_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:hint="@string/student_name_hint"
                        android:singleLine="true"
                        android:text="@={Information.name}"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_bottom_line"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/gray"></LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="入学年份"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size" />
                    <TextView
                        android:id="@+id/fill_inform_entryyear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size"
                        android:gravity="center_vertical|right"
                        android:hint="请选择入学年份"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_module_space_larger"
                    android:background="@color/item_space_color"></LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>
