<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_account_password_revise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.example.asus.shetuan.activity.person.AccountPasswordReviseActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/main_color">

            <ImageView
                android:id="@+id/account_password_revise_backimage"
                android:layout_width="@dimen/title_image_width"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/password_revise"
                android:textColor="@color/title_font_color"
                android:textSize="@dimen/title_font_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/module_item_height"
            android:background="@color/item_space_color"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.example.asus.shetuan.weight.EditTextWithDel
                android:id="@+id/account_password_revise_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/module_item_height"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_originally_password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bottom_line"
                android:background="@color/item_space_color"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.example.asus.shetuan.weight.EditTextWithDel
                android:id="@+id/account_password_revise_newpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/module_item_height"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_new_password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bottom_line"
                android:background="@color/item_space_color"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.example.asus.shetuan.weight.EditTextWithDel
                android:id="@+id/account_password_revise_newpassword_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/module_item_height"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/module_item_height"
            android:background="@color/item_space_color"></LinearLayout>

        <RelativeLayout
            android:id="@+id/account_password_revise_finish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/button_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:text="@string/finished"
                android:textColor="@color/title_font_color"
                android:textSize="@dimen/title_font_size" />
        </RelativeLayout>
    </LinearLayout>
</layout>