<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_function_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeffffff"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"></LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_function_pressactivity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/write" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="@dimen/text_padding_top"
                        android:text="@string/press_activity" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_function_writenotice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/notice" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="@dimen/text_padding_top"
                        android:text="@string/write_notice" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_function_scanning"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="@dimen/text_padding_top"
                        android:text="@string/scanning" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/function_view_closelinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/function_view_closeimage"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/close" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>